# gestalt

./: .gitignore  README.md  build.ps1  meson.build
src/: main.c
